; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/advapi32/wine/extr_crypt.c_CRYPT_GetProvKeyName.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/advapi32/wine/extr_crypt.c_CRYPT_GetProvKeyName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CRYPT_GetProvKeyName.KEYSTR = internal constant [51 x i8] c"Software\\Microsoft\\Cryptography\\Defaults\\Provider\\\00", align 16
@ERROR_NOT_ENOUGH_MEMORY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*)* @CRYPT_GetProvKeyName to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @CRYPT_GetProvKeyName(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %4 = call i32 @strlenW(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @CRYPT_GetProvKeyName.KEYSTR, i64 0, i64 0))
  %5 = load i8*, i8** %2, align 8
  %6 = call i32 @strlenW(i8* %5)
  %7 = add nsw i32 %4, %6
  %8 = add nsw i32 %7, 1
  %9 = sext i32 %8 to i64
  %10 = mul i64 %9, 1
  %11 = trunc i64 %10 to i32
  %12 = call i64 @CRYPT_Alloc(i32 %11)
  store i64 %12, i64* %3, align 8
  %13 = load i64, i64* %3, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %24

15:                                               ; preds = %1
  %16 = load i64, i64* %3, align 8
  %17 = call i32 @strcpyW(i64 %16, i8* getelementptr inbounds ([51 x i8], [51 x i8]* @CRYPT_GetProvKeyName.KEYSTR, i64 0, i64 0))
  %18 = load i64, i64* %3, align 8
  %19 = call i32 @strlenW(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @CRYPT_GetProvKeyName.KEYSTR, i64 0, i64 0))
  %20 = sext i32 %19 to i64
  %21 = add nsw i64 %18, %20
  %22 = load i8*, i8** %2, align 8
  %23 = call i32 @strcpyW(i64 %21, i8* %22)
  br label %27

24:                                               ; preds = %1
  %25 = load i32, i32* @ERROR_NOT_ENOUGH_MEMORY, align 4
  %26 = call i32 @SetLastError(i32 %25)
  br label %27

27:                                               ; preds = %24, %15
  %28 = load i64, i64* %3, align 8
  ret i64 %28
}

declare dso_local i64 @CRYPT_Alloc(i32) #1

declare dso_local i32 @strlenW(i8*) #1

declare dso_local i32 @strcpyW(i64, i8*) #1

declare dso_local i32 @SetLastError(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
